2005-10-13  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec:  Correct python lib directory on 64-bit archs
	(#170621).  Bump build.

2005-10-07  Chris Lumens  <clumens@redhat.com>

	* pykickstart/constants.py:  Add types for scripts.
	* pykickstart/data.py:  Collapse scripts into a single list.
	* pykickstart/parser.py:  Likewise.  Also, fix script printing.
	* pykickstart/writer.py:  Likewise.  Also, rename class to
	KickstartWriter.

2005-10-06  Chris Lumens  <clumens@redhat.com>

	* pykickstart/parser.py (DeprecatedOption):  Add a "deprecated"
	attribute so options can be marked as such.
	(KickstartHandlers):  Change how deprecated commands are printed.  Add
	--card back to the xconfig command as a deprecated option.

2005-10-05  Chris Lumens  <clumens@redhat.com>

	* pykickstart/data.py:  Rename classes to be consistent with the rest
	of the module.  Add default bytesPerInode to partition objects.

2005-10-05  Chris Lumens  <clumens@redhat.com>

	* Imported contents from anaconda.